--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,11 @@ last_name: Garg
 contact_note:
  
 description: 
+social:
+  github_username: ashigarg123
+  linkedin_username: garg-ashi
+  scholar_userid: asC2tlwAAAAJ
+  
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
